--- a/web/index.template.html
+++ b/web/index.template.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://npmcdn.com/react-bootstrap-table@3.2.1/dist/react-bootstrap-table-all.min.css">
 </head>
 <body>
 <div id="main"></div>
